# Firefly-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: release.md
examples/: interpreter_features.ff  llvm_basic.ff
scripts/: package_linux.sh  package_windows.ps1
src/: ast.hpp  driver.hpp  environment.hpp  evaluator.hpp  lexer.hpp  llvm_codegen.hpp  main.cpp  object.hpp  parser.hpp  repl.hpp  semantic.hpp  token.hpp
tests/: README.md  smoke_llvm.ps1  smoke_llvm.sh
